--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <!--result section-->
-<div class="result py-4 d-none bg-light text-center">
+<div id="result" class="result py-4 d-none bg-light text-center">
     <div class="container lead">
         <p>You know <span class="text-primary display-4 p-3">0%</span>about JK</p>
     </div>
