--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="C:\Users\Admin\Desktop\ISRAEL\ITC + MASA\curso JS de youtube\modern-JS\stylesquiz.css" rel="stylesheet">
 </head>
 <body>
     
@@ -20,7 +21,7 @@
 
 
 <!--result section-->
-<div id="result" class="result py-4 d-none bg-light text-center">
+<div id="result" class="result py-4 none bg-light text-center">
     <div class="container lead">
         <p>You know <span class="text-primary display-4 p-3">0%</span>about JK</p>
     </div>
