--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
 
 <!--result section-->
-<div id="result" class="result py-4 none bg-light text-center">
+<div class="none">
+<div id="result" class="result py-4 bg-light text-center">
     <div class="container lead">
         <p>You know <span class="text-primary display-4 p-3">0%</span>about JK</p>
     </div>
+</div>
 </div>
 
 
