--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
 
 
 
-    <script src="C:\Users\Admin\Desktop\ISRAEL\ITC + MASA\curso JS de youtube\modern-JS\section8.js"></script>    
+    <script src="section8.js"></script>    
 </body>
 </html>
