--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!--question 2-->
             <div class="my-5">
-                <p class="lead font-weight-normal">2. Who would I had voted for President?</p>
+                <p class="lead font-weight-normal">2. Who would I have voted for President?</p>
                 <div class="form-check my-2 text-white-50">
                     <input type="radio" name="q2" value="A" checked>
                     <label  class="form-check-label">Donald Trump</label>
