--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="my-5">
                 <p class="lead font-weight-normal">1. What city of the following I like the most?</p>
                 <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q1" value="A" checked>
+                    <input type="radio" name="q1" value="A">
                     <label  class="form-check-label">Lisboa</label>
                 </div>
                     <div class="form-check my-2 text-white-50">
@@ -55,7 +55,7 @@
             <div class="my-5">
                 <p class="lead font-weight-normal">2. Who would I have voted for President?</p>
                 <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q2" value="A" checked>
+                    <input type="radio" name="q2" value="A">
                     <label  class="form-check-label">Donald Trump</label>
                 </div>
                     <div class="form-check my-2 text-white-50">
@@ -69,7 +69,7 @@
             <div class="my-5">
                 <p class="lead font-weight-normal">3. Which type of food I like the most?</p>
                 <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q3" value="A" checked>
+                    <input type="radio" name="q3" value="A">
                     <label  class="form-check-label">Spanish food</label>
                 </div>
                     <div class="form-check my-2 text-white-50">
@@ -84,7 +84,7 @@
             <div class="my-5">
                 <p class="lead font-weight-normal">4. What's my sister's name?</p>
                 <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q4" value="A" checked>
+                    <input type="radio" name="q4" value="A">
                     <label  class="form-check-label">Silvana</label>
                 </div>
                     <div class="form-check my-2 text-white-50">
