--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 
         <form class="quiz-form text-light">
             <!--question 1-->
-            <div class="my-5">
+            <div id="q1" class="my-5">
                 <p class="lead font-weight-normal">1. What city of the following I like the most?</p>
                 <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q1" value="A">
+                    <input id="q1a" type="radio" name="q1" value="A">
                     <label  class="form-check-label">Lisboa</label>
                 </div>
                     <div class="form-check my-2 text-white-50">
-                        <input type="radio" name="q1" value="B">
+                        <input id="q1b" type="radio" name="q1" value="B">
                         <label  class="form-check-label">Villa Gesell</label>
                   
                 </div>
             </div>
 
             <!--question 2-->
-            <div class="my-5">
-                <p class="lead font-weight-normal">2. Who would I have voted for President?</p>
+            <div id="q2" class="my-5 d-none">
+                <p class="lead font-weight-normal">2. Who would I had voted for President?</p>
                 <div class="form-check my-2 text-white-50">
                     <input type="radio" name="q2" value="A">
                     <label  class="form-check-label">Donald Trump</label>
@@ -66,7 +66,7 @@
             </div>
 
             <!--question 3-->
-            <div class="my-5">
+            <div id="q3" class="my-5 d-none">
                 <p class="lead font-weight-normal">3. Which type of food I like the most?</p>
                 <div class="form-check my-2 text-white-50">
                     <input type="radio" name="q3" value="A">
@@ -81,7 +81,7 @@
 
             <!--question 4-->
 
-            <div class="my-5">
+            <div id="q4" class="my-5 d-none">
                 <p class="lead font-weight-normal">4. What's my sister's name?</p>
                 <div class="form-check my-2 text-white-50">
                     <input type="radio" name="q4" value="A">
@@ -96,7 +96,7 @@
 
             <!--submit button-->
             <div class="text-center">
-                <input type="submit" class="btn btn-light">
+                <input id="button" type="submit" class="btn btn-light">
             </div>
         </form>
     </div>
@@ -104,6 +104,6 @@
 
 
 
-    <script src="section8.js"></script>    
+    <script src="C:\Users\Admin\Desktop\ISRAEL\ITC + MASA\curso JS de youtube\modern-JS\section8.js"></script>    
 </body>
 </html>
