--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!--quiz section-->
 <div class="quiz py-4 bg-primary">
     <div class="container">
-        <h2 class="my-5 text-white">On with the questions...</h2>
+        <h2 id="lets-see" class="my-5 text-white">On with the questions...</h2>
 
         <form class="quiz-form text-light">
             <!--question 1-->
