--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <!--submit button-->
             <div class="text-center">
-                <input id="button" type="submit" class="btn btn-light">
+                <input id="button" type="submit" class="btn btn-light d-none">
             </div>
         </form>
     </div>
