--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="C:\Users\Admin\Desktop\ISRAEL\ITC + MASA\curso JS de youtube\modern-JS\stylesquiz.css" rel="stylesheet">
+    <link href="stylesquiz.css" rel="stylesheet">
 </head>
 <body>
     
@@ -95,7 +95,7 @@
             </div>
 
             <!--submit button-->
-            <div class="text-center">
+            <div class="text-center button">
                 <input id="button" type="submit" class="btn btn-light d-none">
             </div>
         </form>
